--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "us-formly-templates",
+  "version": "1.0.1",
   "homepage": "https://github.com/juliofabiane/us-formly-templates",
   "description": "Extensão com templates para usar formly com bootstrap",
   "main": "",
